...
                android:layout_marginLeft="@dimen/detail_item_spacing_horizontal"
                android:layout_marginTop="@dimen/detail_item_spacing_vertical"
                android:drawableLeft="@drawable/account_size_wrapper"
                android:drawablePadding="@dimen/account_circle_padding_left"/>

            <TextView
                android:id="@+id/user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/detail_item_spacing_horizontal"
                android:layout_marginTop="@dimen/detail_item_spacing_vertical"
                android:drawableLeft="@drawable/account_size_wrapper"
                android:drawablePadding="@dimen/account_circle_padding_left"/>
...
                android:layout_marginLeft="@dimen/detail_item_spacing_horizontal"
                android:layout_marginTop="@dimen/detail_item_spacing_vertical"
                android:drawableLeft="@drawable/account_size_wrapper"
                android:drawablePadding="@dimen/account_circle_padding_left"/>

            <TextView
                android:id="@+id/user_repository_link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoLink="web"
                android:linksClickable="true"
                android:layout_marginLeft="@dimen/detail_item_spacing_horizontal"
                android:layout_marginTop="@dimen/detail_item_spacing_vertical"
...
